--- a/.github/workflows/generate-jobs.yml
+++ b/.github/workflows/generate-jobs.yml
@@ -38,8 +38,7 @@ jobs:
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
           MONGODB_DB_NAME: ${{ secrets.MONGODB_DB_NAME }}
-          # One of the following providers is required. If Azure vars are set, the script will use Azure.
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          # Azure OpenAI configuration
           AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
           AZURE_OPENAI_API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
           AZURE_OPENAI_DEPLOYMENT: ${{ secrets.AZURE_OPENAI_DEPLOYMENT }}
